# marginalia

./: README.md  pyproject.toml
specs/: cli-contract.json  comment-spec.json  comment-spec_v0-2.json  ideas.json  implementation-spec.json  implementation-spec_v0-3.json  note-spec_v0-1.json  output-spec.json  v2025-10-28_part1_lions-philosophy-of-programming.txt  v2025-10-28_part2_lions-python-programming-guidelines_updated-2025-11-18.txt  v2025-10-28_part3_lions-python-programming-cookbook.txt
src/marginalia/: 10_desc_global-state.json  12_desc_cli-args.json  20_desc_system-architecture.json  __init__.py  __main__.py  cli.py  db_util.py  discovery.py  errors.py  events.py  file_nav.py  flowctl.py  index_command.py  indexes.json  indexes.py  indexes_command.py  inventory.json  io_utils.py  item_shape.py  meta_parse.py  note_shape.py  output_routing.py  paths.py  reflection.py  runtime.py  scan.py  scan_command.py  state.py
src/marginalia/runtime/: __init__.py  event_kinds.json
src/marginalia/tools/: event_editor.py
